# tauri-sveltekit-starter-template

./: .editorconfig  .gitignore  .prettierrc  README.md  RUST_BACKEND_GUIDE.md  eslint.config.js  package.json  svelte.config.js  tsconfig.json  vite.config.ts
.github/copilot-instructions/: rust.md  svelte.md
capabilities/: default.json
src/: app.css  app.d.ts  app.html
src-tauri/: Cargo.toml  clippy.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  setup.rs  state.rs
src-tauri/src/commands/: general.rs  mod.rs
src/assets/fonts/inter/: inter.css
src/lib/: index.ts
src/lib/components/: ControlButton.svelte  ExternalLink.svelte  TitleBar.svelte
src/lib/config/: app.ts
src/lib/stores/: theme.ts
src/routes/: +layout.svelte  +page.svelte
