[package]
name = "tauri-sveltekit-starter-template"
version = "1.0.0"
description = "A powerful Tauri + SvelteKit application template"
authors = ["Ehsan Khan <ehsan18t@gmail.com>"]
license = "MIT"
repository = "https://github.com/ehsan18t/tauri-sveltekit-starter-template"
homepage = "https://github.com/ehsan18t/tauri-sveltekit-starter-template"
keywords = ["tauri", "sveltekit", "desktop", "template"]
categories = ["multimedia", "text-processing"]
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.7.0", features = [] }
tauri-plugin-log = "2"
thiserror = "2"
