[package]
name = "tauri-sveltekit-starter-template"
version = "1.0.0"
description = "A powerful Tauri + SvelteKit application template"
authors = ["Ehsan Khan <ehsan18t@gmail.com>"]
license = "MIT"
repository = "https://github.com/ehsan18t/tauri-sveltekit-starter-template"
homepage = "https://github.com/ehsan18t/tauri-sveltekit-starter-template"
keywords = ["tauri", "sveltekit", "desktop", "template"]
categories = ["multimedia", "text-processing"]
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
thiserror = "2"
